# OTTO

./: .clang-format  .clang-tidy  .dir-locals.el  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Dockerfile  LICENSE  OSX_INSTALL.md  OSX_INSTALL_SRC.md  OTTO.cbp  README.md  build.sh  cleanup.sh  compile-faust.sh  config.example.hpp  deploy-docs  deploy_key.enc  dockerrun.sh  flags.sh  install.sh  justfile  remake.sh
src/: CMakeLists.txt  events.cpp  events.h  faust-module.h  faust.cpp  faust.h  filesystem.cpp  filesystem.hpp  globals.cpp  globals.h  main.cpp  module-dispatcher.h  module.cpp  module.h  testing.cpp  testing.t.hpp  ui.h  utils.cpp  utils.h
src/app/: application.cpp  application.hpp  input.hpp  layers.cpp  layers.hpp  leds.cpp  leds.hpp
src/app/domains/: audio.cpp  audio.hpp  graphics.hpp  logic.hpp
src/app/drivers/: audio_driver.hpp  graphics_driver.hpp  mcu_port.hpp  midi_driver.hpp
src/app/input/: distributor.hpp  layers.cpp  layers.hpp  navigator.cpp  navigator.hpp  seq_to_midi.cpp  seq_to_midi.hpp
src/app/layers/: navigator.cpp  navigator.hpp  piano_key_layer.cpp  piano_key_layer.hpp
src/app/services/: audio.cpp  audio.hpp  config.cpp  config.hpp  controller.cpp  controller.hpp  dev_console.cpp  dev_console.hpp  graphics.cpp  graphics.hpp  led_manager.cpp  led_manager.hpp  log_manager.cpp  log_manager.hpp  logic_thread.cpp  logic_thread.hpp  runtime.cpp  runtime.hpp  state.hpp  ui_manager.cpp  ui_manager.hpp
src/audio/: capture_client.cpp  capture_client.h  disk.h  jack.cpp  jack.h  midi.cpp  midi.h
src/core/: datafile.cpp  datafile.hpp  faust-module.hpp  faust.cpp  faust.hpp  globals.cpp  globals.h  globals.hpp  input.hpp  module-dispatcher.cpp  module.cpp  service.hpp
src/core/audio/: audio_buffer_pool.hpp  audio_manager.cpp  audio_manager.hpp  clock.hpp  faust.cpp  faust.hpp  jack.cpp  jack.hpp  jack_audio_driver.cpp  jack_audio_driver.hpp  jack_impl.cpp  main_audio.cpp  main_audio.hpp  midi.cpp  midi.hpp  processor.cpp  processor.hpp  processor.impl.hpp  processor.inl  voice_manager.cpp  voice_manager.hpp  waveform.cpp  waveform.hpp
src/core/engine/: engine.cpp  engine.hpp  engine_dispatcher.cpp  engine_dispatcher.hpp  engine_dispatcher.impl.hpp  engine_dispatcher.inl  engine_selector_screen.cpp  engine_selector_screen.hpp  nullengine.cpp  nullengine.hpp  sequencer.cpp  sequencer.hpp
src/core/engines/: engine-dispatcher.cpp  engine-dispatcher.hpp  engine-props.hpp  engine.cpp  engine.hpp  engine_dispatcher.cpp  engine_dispatcher.hpp  (+10 more)
src/core2/: action.hpp  action_queue.hpp  core2.hpp  prop.hpp
src/debug/: glfw_impl.cpp  ui.hpp
src/itc/: action.hpp  action_bus.hpp  action_queue.hpp  action_receiver_registry.hpp  action_sender.hpp  executor.hpp  itc.hpp  prop.hpp  reducer.hpp
src/lib/: alsamixer.cpp  alsamixer.hpp  audio.hpp  chrono.hpp  engine.hpp  globals.cpp  globals.hpp  graphics.hpp  json.cpp  json.hpp  logging.cpp  logging.hpp  meta.hpp  midi.hpp  reflect.hpp  toml.hpp  tweak_console.hpp  voice_manager.hpp  voice_manager.old.hpp  widget.hpp
src/modules/: drum-sampler.cpp  drum-sampler.hpp  metronome.cpp  metronome.dsp  metronome.faust.h  metronome.h  metronome.hpp  mixer.cpp  mixer.h  mixer.hpp  nuke.cpp  nuke.dsp  nuke.faust.h  nuke.hpp  sampler.cpp  sampler.h  simple-drums.cpp  simple-drums.dsp  simple-drums.faust.h  simple-drums.h  simple-drums.hpp  super-saw-synth  super-saw-synth.cpp  super-saw-synth.dsp  super-saw-synth.faust.h  super-saw-synth.h  super-saw-synth.hpp  synth-sampler.cpp  synth-sampler.h  synth-sampler.hpp  tape.cpp  tape.h  tapedeck.cpp  tapedeck.hpp  testsynth.cpp  testsynth.dsp  testsynth.faust.h  testsynth.h
src/services/: application.cpp  application.hpp  audio.cpp  audio.hpp  audio_manager.cpp  audio_manager.hpp  clock_manager.cpp  clock_manager.hpp  controller.cpp  controller.hpp  debug_ui.hpp  engine_manager.cpp  engine_manager.hpp  engines.cpp  engines.hpp  event_manager.cpp  event_manager.hpp  log_manager.cpp  log_manager.hpp  logger.cpp  logger.hpp  osc.cpp  osc.hpp  preset_manager.cpp  preset_manager.hpp  presets.cpp  presets.hpp  settings.cpp  settings.hpp  state.cpp  state.hpp  state_manager.cpp  state_manager.hpp  ui.cpp  ui.hpp  ui_manager.cpp  ui_manager.hpp
src/ui/: base.cpp  base.h  canvas.h  glfw-impl.cpp  glwf-impl.cpp  icons.cpp  icons.h  init.cpp  init.h  mainui.cpp  mainui.h  screens.h  utils.cpp  utils.h  waveform-widget.h  x11-impl.cpp
src/util/: algorithm.hpp  assert.hpp  audio.hpp  bytefile.cpp  bytefile.hpp  cache.hpp  concepts.hpp  crtp.hpp  datafile.cpp  datafile.h  dsp.cpp  dyn-array.h  dyn-array.hpp  enum.hpp  event.hpp  exception.hpp  fifo.cpp  fifo.hpp  filesystem.cpp  filesystem.hpp  flat_map.hpp  flat_multimap.hpp  iterator.hpp  jsonfile.cpp  jsonfile.h  jsonfile.hpp  local_array.hpp  local_vector.hpp  locked.hpp  logger.cpp  logger.hpp  macros.hpp  match.h  match.hpp  math.hpp  meta.hpp  observable.hpp  opt_arg_func.hpp  poly-ptr.h  poly-ptr.hpp  (+53 more)
test/: CMakeLists.txt  benchmark_csv_reporter.hpp  benchmarks.cpp  dummy_services.hpp  graphics.t.cpp  graphics.t.hpp  main.t.cpp  testing.t.hpp
test/app/: input.t.cpp  layers.t.cpp  leds.t.cpp
test/core/: service.t.cpp
test/core2/: core2.t.cpp  prop.t.cpp
test/engines/: wifi_selector_screen.cpp  wifi_selector_screen.hpp  wifi_ui.t.cpp
test/itc/: executor.t.cpp  itc.t.cpp  prop.t.cpp  reducer.t.cpp
test/lib/: alsamixer.t.cpp  midi.t.cpp  reflect.t.cpp  voice_manager.t.cpp  voice_manager.t.cpp.old
test/services/: engines.cpp
test/stubs/: audio.hpp  controller.hpp  graphics.hpp  logic_thread.hpp  midi.hpp  state.hpp
test/system/: encoder_gui.t.cpp  master_screen.t.cpp  simple_engine.hpp  simple_engine.t.cpp  simple_graphics.t.cpp  statemanager_destruction.t.cpp  voicemanager_settings_ui.t.cpp
test/util/: algorithm.t.cpp  bytefile.t.cpp  dyn-array.t.cpp  flat_map.t.cpp  flat_multimap.t.cpp  iterator.t.cpp  local_vector.t.cpp  meta.t.cpp  opt_arg_func.t.cpp  poly-ptr.t.cpp  result.t.cpp  soundfile.t.cpp  tapefile.t.cpp  timer.t.cpp  type_traits.t.cpp  variant_w_base.t.cpp  with_limits.t.cpp
(+738 files in other folders)
